--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
     "logo": "https://django-starter-buttercms.herokuapp.com/static/images/logo/logo.svg",
     "keywords": ["django", "python", "buttercms"],
     "image": "heroku/python",
+    "buildpacks": [
+        {
+          "url": "heroku/python"
+        }
+    ],
     "env": {
         "SECRET_KEY": {
           "description": "The secret key for the Django application.",
