--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
         }
     ],
     "env": {
-        "SECRET_KEY": {
+        "DJANGO_SECRET_KEY": {
             "description": "The secret key for the Django application.",
             "generator": "secret"
         },
